small focus:visible outline fix

--- a/src/components/action_link/_action_link.scss
+++ b/src/components/action_link/_action_link.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     width:fit-content;
+    outline: none;
     
     &:hover {
         > * .great-ds-action-link__image-icon-background {
